--- a/views/pages/catalog/catalog.ejs
+++ b/views/pages/catalog/catalog.ejs
@@ -199,7 +199,7 @@
                            <div class="widget widget_socialsharing_widget">
                               <h3 class="widget-title-modal sfmono">Share this product</h3>
                               <ul class="social-icons">
-                                 <li><a target="_blank" title="facebook" href="#" class="social-icon"><i
+                                 <li><a target="_blank" title="facebook" href="https://www.facebook.com/parinya.seetawan" class="social-icon"><i
                                           class="fab fa-facebook-f"></i></a>
                                  </li>
                                  <li><a target="_blank" title="twitter" href="#" class="social-icon"><i
@@ -209,7 +209,7 @@
                                  </li>
                                  <li><a target="_blank" title="tumblr" href="#" class="social-icon"><i
                                           class="fab fa-tumblr"></i></a></li>
-                                 <li><a target="_blank" title="instagram" href="#" class="social-icon"><i
+                                 <li><a target="_blank" title="instagram" href="https://www.instagram.com/parin_lift/?hl=th" class="social-icon"><i
                                           class="fab fa-instagram"></i></i></a></li>
                               </ul>
                            </div>
