--- a/views/pages/contributor.ejs
+++ b/views/pages/contributor.ejs
@@ -24,20 +24,23 @@
         h2 {
             font-family: Ekkamai-new;
             color: white;
+            text-shadow: 2px 2px 4px #000000;
         }
 
         hr.new2 {
             border-top: 3px dashed white;
+            text-shadow: 2px 2px 4px #000000;
         }
 
         .name {
             font-family: Ekkamai-new;
             font-size: 18px;
             color: white;
+            text-shadow: 2px 2px 5px #000000;
         }
         .bg {
             /* The image used */
-            background-image: url('/bg/con-bg.png');
+            background-image: url('/bg/bg2.jpg');
 
             /* Full height */
             height: 100%;
@@ -50,13 +53,10 @@
     </style>
 </head>
 
-<body class="bg" >
-   
-   <div class="container">
+<body class="bg">
+    <div class="container">
         <br>
         <a href="/"><button class="btn-lg btn btn-danger">BACK</button></a>
-        
-      
         <h1 class="display-4 text-center">Website  
            <span class="btn-dark"> Contributor</span></h1>
         <h2 class="display-4 text-center" style="font-size: 45px;">(บอร์ดบริหาร)</h2>
