--- a/views/pages/discount.ejs
+++ b/views/pages/discount.ejs
@@ -24,7 +24,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/home">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/admin">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-helicopter"></i>
                 </div>
@@ -36,7 +36,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="/home">
+                <a class="nav-link" href="/admin">
                     <i class="fas fa-fw fa-home "></i>
                     <span>Home</span></a>
             </li>
@@ -303,7 +303,7 @@
                         text += '<td>' + obj.Discount + '</td>'
                         text += '<td>' + obj.TotalAmount + '</td>'
                         text += '<td>' + obj.Expire + '</td>'
-                        text += '<td>' + "<form action='/discountDel' method='POST'>"
+                        text += '<td>' + "<form action='/admin/discount/discountDel' method='POST'>"
                         text += "<button name='discountID'class='btn btn-primary' Value='" +
                             obj.discountNo + "'> Delete </button> "
                         text += '</form>' + '</td>'
